--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,29 +1,5 @@
 <%- include('../includes/head.ejs') %>
-    <style>
-        table {
-            border-collapse: collapse;
-            margin: auto;
-            margin-bottom: 10px;
-
-        }
-
-        td,
-        th {
-            border: 1px solid #dddddd;
-            text-align: left;
-            padding: 8px;
-        }
-
-        tr:nth-child(even) {
-            background-color: #dddddd;
-        }
-
-        .center {
-            text-align: center;
-            margin: auto;
-
-        }
-    </style>
+    <link rel="stylesheet" href="/css/cart.css">
     </head>
 
     <body>
