--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -26,7 +26,8 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <%- include('../includes/add-to-cart.ejs',{product: product}) %>
+                                    <%- include('../includes/add-to-cart.ejs',{product: product, isAuthenticated:
+                                        isAuthenticated}) %>
                                 </div>
                             </article>
                             <% } %>
