--- a/views/includes/add-to-cart.ejs
+++ b/views/includes/add-to-cart.ejs
@@ -1,5 +1,6 @@
 <form action="/cart" method="POST">
-
-    <button class="btn">Add to Cart</button>
-    <input type="hidden" name="productId" value="<%= product._id %>">
+    <% if(isAuthenticated) { %>
+        <button class="btn">Add to Cart</button>
+        <input type="hidden" name="productId" value="<%= product._id %>">
+        <% } %>
 </form>
