--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -9,3 +9,4 @@
         <%= docTitle %>
     </title>
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/product.css">
