added authentication flow

--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -28,6 +28,7 @@
                                     <form action="/cart-delete" method="POST">
                                         <button class="btn" type="submit">Delete </button>
                                         <input type="hidden" name="productId" value="<%=product.productId._id %>">
+                                        <input type="hidden" name="_csrf" value="<%= csrfToken  %>">
                                     </form>
                                 </td>
                             </tr>
@@ -36,6 +37,7 @@
                     <div class="center">
                         <form action="/orders" method="post">
                             <button type="submit" class="btn">Order Now</button>
+                            <input type="hidden" name="_csrf" value="<%= csrfToken  %>">
                         </form>
                     </div>
 
