--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -8,18 +8,20 @@
 
             <main>
                 <%- include('../includes/errorMessage.ejs') %>
-                    <form class="login-form" action="/login" method="POST">
+                    <form class="login-form" action="/signup" method="POST">
                         <div class="form-control">
-                            <label for="email">Email</label>
+                            <label for="email">E-Mail</label>
                             <input type="email" name="email" id="email">
                         </div>
                         <div class="form-control">
                             <label for="password">Password</label>
                             <input type="password" name="password" id="password">
                         </div>
-                        <button class="btn" type="submit">
-                            LOG IN
-                        </button>
+                        <div class="form-control">
+                            <label for="confirmPassword">Confirm Password</label>
+                            <input type="password" name="confirmPassword" id="confirmPassword">
+                        </div>
+                        <button class="btn" type="submit">Sign up</button>
                         <input type="hidden" name="_csrf" value="<%= csrfToken  %>">
                     </form>
             </main>
