--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -9,7 +9,7 @@
             <li class="main-header__item">
                 <a class="<%= path === '/products' ? 'active' : '' %>" href="/products">Products</a>
             </li>
-            <% if(isAuthenticated) { %>
+            <% if (isAuthenticated) { %>
                 <li class="main-header__item">
                     <a class="<%= path === '/cart' ? 'active' : '' %>" href="/cart">Cart</a>
                 </li>
@@ -17,7 +17,8 @@
                     <a class="<%= path === '/orders' ? 'active' : '' %>" href="/orders">Orders</a>
                 </li>
                 <li class="main-header__item">
-                    <a class="<%= path === '/add-product' ? 'active' : '' %>" href="/admin/add-product">Add Product
+                    <a class="<%= path === '/admin/add-product' ? 'active' : '' %>" href="/admin/add-product">Add
+                        Product
                     </a>
                 </li>
                 <li class="main-header__item">
@@ -27,14 +28,18 @@
                 <% } %>
         </ul>
         <ul class="main-header__item-list">
-            <% if(!isAuthenticated) { %>
+            <% if (!isAuthenticated) { %>
                 <li class="main-header__item">
-                    <a href="/login" class="<%= path === '/login' ? 'active' : '' %>">Log in</a>
+                    <a class="<%= path === '/login' ? 'active' : '' %>" href="/login">Login</a>
+                </li>
+                <li class="main-header__item">
+                    <a class="<%= path === '/signup' ? 'active' : '' %>" href="/signup">Signup</a>
                 </li>
                 <% } else { %>
                     <li class="main-header__item">
                         <form action="/logout" method="post">
-                            <button type="submit">Log out</button>
+                            <button type="submit">Logout</button>
+                            <input type="hidden" name="_csrf" value="<%= csrfToken  %>">
                         </form>
                     </li>
                     <% } %>
@@ -70,10 +75,14 @@
                     <li class="mobile-nav__item">
                         <a class="<%= path === '/login' ? 'active' : '' %>" href="/login">Login</a>
                     </li>
+                    <li class="mobile-nav__item">
+                        <a class="<%= path === '/signup' ? 'active' : '' %>" href="/signup">Signup</a>
+                    </li>
                     <% } else { %>
                         <li class="mobile-nav__item">
                             <form action="/logout" method="post">
                                 <button type="submit">Logout</button>
+                                <input type="hidden" name="_csrf" value="<%= csrfToken  %>">
                             </form>
                         </li>
                         <% } %>
