--- a/views/500.ejs
+++ b/views/500.ejs
@@ -4,6 +4,6 @@
     <body>
         <%- include('includes/navigation.ejs') %>
             <h1>An error occured</h1>
-            <p>Sorry for the inconvinience we are fixing the problem image.png</p>
+            <p>Sorry for the inconvinience we are fixing the problem</p>
 
             <%- include('includes/end.ejs') %>
