--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -9,29 +9,34 @@
             <main>
                 <%- include('../includes/errorMessage.ejs') %>
                     <form class="product-form" action=" <%= editing ? '/admin/edit-product' : '/admin/add-product' %>"
-                        method="POST">
+                        method="POST" enctype="multipart/form-data">
                         <div class="form-control">
                             <label for="title">Title</label>
                             <input type="text" name="title" id="title"
                                 class="<%= validationErrors.find(e => e.param === 'title')  ? 'invalid' :  ''%>"
                                 value=" <%=editing || hasErrors ? product.title : '' %> ">
                         </div>
-                        <div class="form-control">
+                        <!-- <div class="form-control">
                             <label for="imageUrl">Image URL</label>
                             <input type="text" name="imageUrl" id="imageUrl"
                                 class="<%= validationErrors.find(e => e.param === 'imageUrl')  ? 'invalid' :  ''%>"
                                 value=" <%=editing || hasErrors ? product.imageUrl : '' %> ">
+                        </div> -->
+                        <div class="form-control">
+                            <label for="image">Image</label>
+                            <input type="file" name="image" id="image">
+
                         </div>
                         <div class="form-control">
                             <label for="price">Price</label>
                             <input type="number" name="price" id="price" step="0.01"
                                 class="<%= validationErrors.find(e => e.param === 'price')  ? 'invalid' :  ''%>"
-                                value=" <%=editing || hasErrors ? product.price : '' %>">
+                                value="<%=editing || hasErrors ? product.price : '' %>">
                         </div>
                         <div class="form-control">
                             <label for="description">Description</label>
                             <textarea name="description" id="description"
-                                class="<%= validationErrors.find(e => e.param === 'description')  ? 'invalid' :  ''%>""
+                                class="<%= validationErrors.find(e => e.param === 'description')  ? 'invalid' :  ''%>"
                                 rows=" 5"><%=editing || hasErrors ? product.description.trim() : '' %></textarea>
                         </div>
 
