--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -32,8 +32,10 @@
                             </article>
                             <% } %>
                     </div>
-                    <% } else { %>
-                        <h1>No Products Found!</h1>
-                        <% } %>
+                    <%- include('../includes/pagination.ejs', {currentPage: currentPage, previousPage:
+                        previousPage,hasPreviousPage, hasPreviousPage, hasNextPage, hasNextPage, nextPage: nextPage}) %>
+                        <% } else { %>
+                            <h1>No Products Found!</h1>
+                            <% } %>
             </main>
             <%- include('../includes/end.ejs') %>
