--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -28,11 +28,11 @@
                                 </div>
                                 <div class="card__actions">
                                     <a href="/admin/edit-product/<%= product._id %>?edit=true" class="btn">Edit</a>
-                                    <form action="/admin/delete-product" method="POST">
-                                        <input type="hidden" name="productId" value="<%=product._id %>">
-                                        <input type="hidden" name="_csrf" value="<%= csrfToken  %>">
-                                        <button class="btn" type="submit">Delete</button>
-                                    </form>
+                                    <!-- <form action="/admin/delete-product" method="POST"> -->
+                                    <input type="hidden" name="productId" value="<%=product._id %>">
+                                    <input type="hidden" name="_csrf" value="<%= csrfToken  %>">
+                                    <button class="btn" type="btn" onclick="deleteProduct(this)">Delete</button>
+                                    <!-- </form> -->
 
                                 </div>
                             </article>
@@ -42,4 +42,5 @@
                         <h1>No Products Found!</h1>
                         <% } %>
             </main>
+            <script src="/js/admin.js"></script>
             <%- include('../includes/end.ejs') %>
