--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -8,7 +8,7 @@
             </h1>
 
             <!-- Image -->
-            <img src="<%= product.imageUrl %>" alt="<%= product.title %>" class="product-image">
+            <img src="/<%= product.imageUrl %>" alt="<%= product.title %>" class="product-image">
 
             <!-- Price -->
             <p class="product-price">PRICE: $<%= product.price %>
