--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -31,7 +31,7 @@
                                     <!-- <form action="/admin/delete-product" method="POST"> -->
                                     <input type="hidden" name="productId" value="<%=product._id %>">
                                     <input type="hidden" name="_csrf" value="<%= csrfToken  %>">
-                                    <button class="btn" type="btn" onclick="deleteProduct(this)">Delete</button>
+                                    <button class="btn btn--delete" type="button">Delete</button>
                                     <!-- </form> -->
 
                                 </div>
